--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>China Page</h1>
+    {% for question in questions.all %}
+
+    {{ question.question }}
+
+    {% endfor %}
 </body>
 </html>
