--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -23,7 +23,7 @@
 					<section class="intro">
 						<header>
 							<h1>China</h1>
-							<p>“生死有命，富贵在天”</p>
+							<h2>“生死有命，富贵在天”</h2>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -39,8 +39,8 @@
 						<header>
                             <div>
                                 <h1>{{ forloop.counter }}</h1>
-                                <h3>Lorem gravida</h3>
-								<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+                                <h3>Explaination</h3>
+								<p>{{ question.explanation }}</p>
                             </div>
 
 						</header>
