added newbutton text

--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -45,7 +45,8 @@
 
 						</header>
 						<div class="content">
-                            <h2>{{ question.question }}</h2>
+							<h2>{{ question.question }}</h2>
+							<img src="{{ question.image.url }}" alt="">
                             <ul class="actions">
                                 <li><a href="#" class="button">Default</a></li>
                                 <li><a href="#" class="button">Default</a></li>
