--- a/conquez/globe/templates/globe/globe.html
+++ b/conquez/globe/templates/globe/globe.html
@@ -1,12 +1,19 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/giojs@2.2.1/build/gio.min.js"></script>
+    
     <title>Globe</title>
+
 </head>
 <body>
-    <h1>Globe Here</h1>
+    <!-- container to draw 3D Gio globe-->
+    <div id="globalArea"></div>
 </body>
 </html>
