--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE HTML>
 <!--
 	Paradigm Shift by HTML5 UP
@@ -46,7 +46,7 @@
 						</header>
 						<div class="content">
 							<h2>{{ question.question }}</h2>
-							<img src="{{ question.image.url }}" alt="">
+							<img src="{{ question.image.url }}"></img>
                             <ul class="actions">
                                 <li><a href="#" class="button">Default</a></li>
                                 <li><a href="#" class="button">Default</a></li>
