--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -13,8 +13,7 @@
       <div class="card card--19">
         <div class="card__header card__header--19">
           <div class="card__watermark" data-watermark="Air"></div>
-
-          <img src="https://s32.postimg.org/7b31lbyit/nike.png" alt="Nike" class="card__logo card__will-animate">
+          <div class="card__logo card__will-animate"></div>
 
           <span class="card__price card__will-animate">$120</span>
 
@@ -24,7 +23,7 @@
         </div>
 
         <div class="card__body">
-          <img src="https://s32.postimg.org/jqzrf2rut/nike19.png" alt="Nike 19" class="card__image card__will-animate">
+          <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--19 card__will-animate">Wish List</div>
 
           <span class="card__category card__will-animate">Men's running shoe</span>
@@ -35,7 +34,7 @@
         <div class="card__header card__header--solstice">
           <div class="card__watermark" data-watermark="Classic"></div>
 
-          <img src="https://s32.postimg.org/7b31lbyit/nike.png" alt="Nike" class="card__logo card__will-animate">
+          <div class="card__logo card__will-animate"></div>
 
           <span class="card__price card__will-animate">$129</span>
 
@@ -45,7 +44,7 @@
         </div>
 
         <div class="card__body">
-          <img src="https://s32.postimg.org/eoifkaikl/nike_air_solstice.png" alt="Nike Solstice" class="card__image card__will-animate">
+          <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
 
           <span class="card__category card__will-animate">Men's shoe</span>
@@ -56,7 +55,7 @@
         <div class="card__header card__header--huarache">
           <div class="card__watermark" data-watermark="Safari"></div>
 
-          <img src="https://s32.postimg.org/7b31lbyit/nike.png" alt="Nike" class="card__logo card__will-animate">
+          <div class="card__logo card__will-animate"></div>
 
           <span class="card__price card__will-animate">$140</span>
 
@@ -66,7 +65,7 @@
         </div>
 
         <div class="card__body">
-          <img src="https://s32.postimg.org/4fpyeguit/nike_safari.png" alt="Nike Huarache" class="card__image card__will-animate">
+          <div class="card__image card__will-animate"></div>
           <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
 
           <span class="card__category card__will-animate">Men's shoe</span>
@@ -77,7 +76,7 @@
           <div class="card__header card__header--huarache">
             <div class="card__watermark" data-watermark="Safari"></div>
   
-            <img src="https://s32.postimg.org/7b31lbyit/nike.png" alt="Nike" class="card__logo card__will-animate">
+            <div class="card__logo card__will-animate"></div>
   
             <span class="card__price card__will-animate">$140</span>
   
@@ -87,7 +86,7 @@
           </div>
   
           <div class="card__body">
-            <img src="https://s32.postimg.org/4fpyeguit/nike_safari.png" alt="Nike Huarache" class="card__image card__will-animate">
+            <div class="card__image card__will-animate"></div>
             <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
   
             <span class="card__category card__will-animate">Men's shoe</span>
