--- a/conquez/globe/templates/globe/globe.html
+++ b/conquez/globe/templates/globe/globe.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,11 @@
 
 </head>
 <body>
-    <!-- container to draw 3D Gio globe-->
-    <div id="globalArea"></div>
+    <h1>Globe Here</h1>
+    <a href="https://still-lake-26463.herokuapp.com/china/">China</a>
+    <a href="https://still-lake-26463.herokuapp.com/turkey/">Turkey</a>
+    <a href="https://still-lake-26463.herokuapp.com/brazil/">Brazil</a>
+    <a href="https://still-lake-26463.herokuapp.com/canada/">Canada</a>
+    <a href="https://still-lake-26463.herokuapp.com/india/">India</a>
 </body>
 </html>
