--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -3,93 +3,110 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>China</title>
     <link rel="stylesheet" href="{% static 'china/css/style.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'china/css/burger.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600" rel="stylesheet">
   </head>
   <body>
 
+    <!-- Navigation -->
+    <div class="b-nav">
+      <li><a class="b-link" href="" target="_blank">Globe</a></li>
+      <li><a class="b-link" href="" target="_blank">Profile</a></li>
+    </div>
+    
+    <!-- Burger-Icon -->
+    <div class="b-container">
+      <div class="b-menu">
+        <div class="b-bun b-bun--top"></div>
+        <div class="b-bun b-bun--mid"></div>
+        <div class="b-bun b-bun--bottom"></div>
+      </div>
+    </div>
+
     <div class="wrapper">
-      <div class="card card--19">
-        <div class="card__header card__header--19">
-          <div class="card__watermark" data-watermark="Air"></div>
+      <div class="card card--first">
+        <div class="card__header card__header--first">
+          <!-- <div class="card__watermark" data-watermark="Plt"></div> -->
           <div class="card__logo card__will-animate"></div>
 
-          <span class="card__price card__will-animate">$120</span>
+          <span class="card__price card__will-animate">Question 1</span>
 
-          <h1 class="card__title card__will-animate">Air Structure 1</h1>
-          <span class="card__subtitle card__will-animate">From the Flymesh upper to the triple-density foam midsole, the Nike Air Zoom Structure 19 Men's Running Shoe offers plenty of support and the response you need for a smooth, stable ride that feels ultra fast.</span>
+          <h1 class="card__title card__will-animate">Give it a try!!!</h1>
+          <span class="card__subtitle card__will-animate">Something about pollution in here.</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--19 card__will-animate">Wish List</div>
+          <div class="card__wish-list card__wish-list--19 card__will-animate">Multiple Choice Section</div>
 
-          <span class="card__category card__will-animate">Men's running shoe</span>
+          <span class="card__category card__will-animate"></span>
         </div>
       </div>
 
-      <div class="card card--solstice">
-        <div class="card__header card__header--solstice">
-          <div class="card__watermark" data-watermark="Classic"></div>
+      <div class="card card--second">
+        <div class="card__header card__header--second">
+          <!-- <div class="card__watermark" data-watermark="3r's"></div> -->
 
           <div class="card__logo card__will-animate"></div>
 
-          <span class="card__price card__will-animate">$129</span>
+          <span class="card__price card__will-animate">Question 2</span>
 
-          <h1 class="card__title card__will-animate">Air Solstice QS</h1>
-          <span class="card__subtitle card__will-animate">The Nike Air Solstice draws inspiration from the swoosh's classic running shoes of the 1980's updating the style with premium materials and impressive production quality.</span>
+          <h1 class="card__title card__will-animate">Let's move forward! Advance!</h1>
+          <span class="card__subtitle card__will-animate">Something about the 3r's here</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
+          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
 
-          <span class="card__category card__will-animate">Men's shoe</span>
+          <span class="card__category card__will-animate"></span>
         </div>
       </div>
 
-      <div class="card card--huarache">
-        <div class="card__header card__header--huarache">
-          <div class="card__watermark" data-watermark="Safari"></div>
+      <div class="card card--third">
+        <div class="card__header card__header--third">
+          <!-- <div class="card__watermark" data-watermark="r&w"></div> -->
 
           <div class="card__logo card__will-animate"></div>
 
-          <span class="card__price card__will-animate">$140</span>
+          <span class="card__price card__will-animate">Question 3</span>
 
-          <h1 class="card__title card__will-animate">Air Huarache Utility</h1>
-          <span class="card__subtitle card__will-animate">The Nike Air Huarache Utility Men's Shoe toughens up a famous running shoe with a nylon upper, fused mudguard and vibrant detail.</span>
+          <h1 class="card__title card__will-animate">Almost there. Endurance helps us grow.</h1>
+          <span class="card__subtitle card__will-animate">Something about the Resource and Waste here.</span>
 
         </div>
 
         <div class="card__body">
           <div class="card__image card__will-animate"></div>
-          <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
+          <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
 
-          <span class="card__category card__will-animate">Men's shoe</span>
+          <span class="card__category card__will-animate"></span>
         </div>
       </div>
 
-      <div class="card card--huarache">
-          <div class="card__header card__header--huarache">
-            <div class="card__watermark" data-watermark="Safari"></div>
+      <div class="card card--fourth">
+          <div class="card__header card__header--fourth">
+            <!-- <div class="card__watermark" data-watermark="ecosystem"></div> -->
   
             <div class="card__logo card__will-animate"></div>
   
-            <span class="card__price card__will-animate">$140</span>
+            <span class="card__price card__will-animate">Question 4</span>
   
-            <h1 class="card__title card__will-animate">Air Huarache Utility</h1>
-            <span class="card__subtitle card__will-animate">The Nike Air Huarache Utility Men's Shoe toughens up a famous running shoe with a nylon upper, fused mudguard and vibrant detail.</span>
+            <h1 class="card__title card__will-animate">Well done. You are on the last question!</h1>
+            <span class="card__subtitle card__will-animate">Something about the Ecosystem here.</span>
   
           </div>
   
           <div class="card__body">
             <div class="card__image card__will-animate"></div>
-            <div class="card__wish-list card__wish-list--solstice card__will-animate">Wish List</div>
+            <div class="card__wish-list card__wish-list--solstice card__will-animate">Multiple Choice Section</div>
   
-            <span class="card__category card__will-animate">Men's shoe</span>
+            <span class="card__category card__will-animate"></span>
           </div>
         </div>
 
@@ -101,11 +118,13 @@
       <div class="cards-placeholder__item"></div>
       <div class="cards-placeholder__item"></div>
     </div>
-
-  </body>
-</html>
-  
-    <script src="{% static 'china/js/index.js' %}"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+    crossorigin="anonymous"></script>
+  <script src="{% static 'china/js/index.js' %}"></script>
+  <script src="{% static 'china/js/breakpoints.min.js' %}"></script>
+  <script src="{% static 'china/js/burger.js' %}"></script>
 
 </body>
 </html>
