--- a/design/m/sliderpage/turkey/css/main.css
+++ b/design/m/sliderpage/turkey/css/main.css
@@ -21,12 +21,12 @@ body {
 .card {
   display: block;
   position: absolute;
-  top: 10%;
+  top: 18%;
   margin: 0 auto;
-  width: 400px;
+  width: 330px;
   background-color: #fff;
   border-radius: 15px;
-  height: 600px;
+  height: 500px;
 
   box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.2);
 
@@ -61,35 +61,35 @@ body {
 }
 
 .card__header--first {
-  background-color:  #de2910ff;
-  background-image: linear-gradient(#de2910ff, #FF0000);
+  background-color: #E8112D;
+  background-image: linear-gradient(#E8112D, white);
 
-  background: #de2910ff;
-  background: linear-gradient(#de2910ff, #FF0000);
+  background: #E8112D;
+  background: linear-gradient(#E8112D, white);
 }
 
 .card__header--second {
-  background-color: #006600;
-  background-image: linear-gradient(#006600, #00795E);
+  background-color: #3CA3FC;
+  background-image: linear-gradient(#3CA3FC, #FFD300);
 
-  background: #006600;
-  background: linear-gradient(#006600, #00795E);
+  background: #3CA3FC;
+  background: linear-gradient(#3CA3FC, #FFD300);
 }
 
 .card__header--third {
-  background-color: #000095;
-  background-image: linear-gradient(#000095, rgb(67,145, 211));
+  background-color: #26C9F7;
+  background-image: linear-gradient(#26C9F7, #DFFC3C);
 
-  background: #000095;
-  background: linear-gradient(#000095, rgb(67,145, 211));
+  background: #26C9F7;
+  background: linear-gradient(#26C9F7, #DFFC3C);
 }
 
 .card__header--fourth {
-  background-color: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background-color: #B993D6;
+  background-image: linear-gradient(#B993D6, #8CA6DB);
 
-  background: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background: #B993D6;
+  background: linear-gradient(#B993D6, #8CA6DB);
 }
 
 .card__watermark {
@@ -166,24 +166,18 @@ body {
 }
 
 .card__wish-list--19 {
-  color: #de2910ff;
-  border-color: #de2910ff;
+  color: #E8112D;
+  border-color: #E8112D;
 }
 
 .card__wish-list--solstice {
-  color: #00795E;
-  border-color: #00795E;
+  color: #FFBA00;
+  border-color: #FFBA00;
 }
-
-.card__wish-list--taiwan {
-  color: #000095;
-  border-color: #000095;
-}
-
 
 .card__wish-list--huarache {
-  color: rgb(247, 207, 76);
-  border-color: rgb(247, 207, 76);
+  color: #26C9F7;
+  border-color: #26C9F7;
 }
 
 .card__category {
