--- a/design/m/sliderpage/turkey/css/style.css
+++ b/design/m/sliderpage/turkey/css/style.css
@@ -61,35 +61,36 @@ body {
 }
 
 .card__header--first {
-  background-color:  #de2910ff;
-  background-image: linear-gradient(#de2910ff, #FF0000);
+  background-color: #FF9933;
+  background-image: linear-gradient(#FF9933, #F4C430
+  );
 
-  background: #de2910ff;
-  background: linear-gradient(#de2910ff, #FF0000);
+  background: #FF9933;
+  background: linear-gradient(#FF9933, #F4C430);
 }
 
 .card__header--second {
-  background-color: #006600;
-  background-image: linear-gradient(#006600, #00795E);
+  background-color: #138808;
+  background-image: linear-gradient(#138808, #34c033);
 
-  background: #006600;
-  background: linear-gradient(#006600, #00795E);
+  background: #138808;
+  background: linear-gradient(#138808, #34c033);
 }
 
 .card__header--third {
-  background-color: #000095;
-  background-image: linear-gradient(#000095, rgb(67,145, 211));
+  background-color: #000080;
+  background-image: linear-gradient(#000080, #003366);
 
-  background: #000095;
-  background: linear-gradient(#000095, rgb(67,145, 211));
+  background: #000080;
+  background: linear-gradient(#000080, #003366);
 }
 
 .card__header--fourth {
-  background-color: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background-color: #FFAA1D;
+  background-image: linear-gradient(#FFAA1D,,#EEEA62);
 
-  background: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background: #FFAA1D;
+  background: linear-gradient(#FFAA1D,#EEEA62);
 }
 
 .card__watermark {
@@ -166,24 +167,23 @@ body {
 }
 
 .card__wish-list--19 {
-  color: #de2910ff;
-  border-color: #de2910ff;
+  color: #FF9933;
+  border-color: #FF9933;
 }
 
 .card__wish-list--solstice {
-  color: #00795E;
-  border-color: #00795E;
+  color: #138808;
+  border-color:#138808;
 }
 
-.card__wish-list--taiwan {
-  color: #000095;
-  border-color: #000095;
+.card__wish-list--quebec {
+  color: #003366;
+  border-color: #003366;
 }
-
 
 .card__wish-list--huarache {
-  color: rgb(247, 207, 76);
-  border-color: rgb(247, 207, 76);
+  color: #FFAA1D;
+  border-color: #FFAA1D;
 }
 
 .card__category {
