--- a/design/Dhruv/Globe/main.css
+++ b/design/Dhruv/Globe/main.css
@@ -1,12 +1,13 @@
 body {
     background-color: white;
+    overflow: hidden;
+    position: fixed;
+    height: 100%;
+    width: 100%
 }
 #globalArea {
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate( -50%, -50% );*/
-    height: 95%;
-    width: 95%;
+    height: 93%;
+    width: 93%;
     position: absolute;
 }
 #infoBoard {
