--- a/design/Bisht/Navbar/navbar1.css
+++ b/design/Bisht/Navbar/navbar1.css
@@ -6,10 +6,14 @@ body{
     background-size: cover;
 
 }
-.container{
-    width: 80%;
-    margin: 0 auto;
-
+.content {
+    height: 200vh;
+    background-image: url(//unsplash.it/1000/1000);
+    background-color: #333;
+    background-blend-mode: multiply;
+    background-size: cover;
+    display: grid;
+    place-items: center;
 }
 header{
     background: #55d6aa;
