--- a/design/m/sliderpage/canada/css/style.css
+++ b/design/m/sliderpage/canada/css/style.css
@@ -1,6 +1,5 @@
 html,
 body {
-  height: 95%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -9,14 +8,18 @@ body {
 
   transition: background-color 0.2s;
   will-change: background-color;
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
 }
 
 .wrapper {
-  position: relative;
-  overflow-x: hidden;
+  position: fixed;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
+
 
 .card {
   display: block;
@@ -199,16 +202,19 @@ body {
 
 .cards-placeholder {
   display: block;
-  position: relative;
   margin-bottom: 20px;
   text-align: center;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  bottom: 0;
 }
 
 .cards-placeholder__item {
   opacity: 0.3;
   display: inline-block;
   margin-right: 10px;
-  background-color: #fff;
+  background-color: black;
   width: 30px;
   height: 5px;
   border-radius: 5px;
