--- a/design/m/sliderpage/india/css/style.css
+++ b/design/m/sliderpage/india/css/style.css
@@ -1,6 +1,5 @@
 html,
 body {
-  height: 95%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -9,14 +8,18 @@ body {
 
   transition: background-color 0.2s;
   will-change: background-color;
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
 }
 
 .wrapper {
-  position: relative;
-  overflow-x: hidden;
+  position: fixed;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
+
 
 .card {
   display: block;
