--- a/design/Bisht/quiz/assets/css/main.css
+++ b/design/Bisht/quiz/assets/css/main.css
@@ -6,7 +6,7 @@ body{
 #container{
     margin : 20px auto;
     background-color: white;
-    height: 500px;
+    height: 300px;
     width : 700px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
@@ -62,16 +62,7 @@ body{
     position: absolute;
     right : 0;
     top : 125px;
-    padding : 10px;
-    margin: 5px
-}
-#submitButton{
-    width : 480px;
-    position: absolute;
-    right : 0;
-    bottom : 75px;
-    padding : 10px;
-    margin: 5px;
+    padding : 10px
 }
 .choice{
     display: inline-block;
