--- a/conquez/authen/templates/authen/login.html
+++ b/conquez/authen/templates/authen/login.html
@@ -1,16 +1,32 @@
-{% extends 'authen/base.html' %}
-{% block title %} Sign in to Conquez {% endblock %}
-{% block content %}
-<div class="row">
-    <div class="col-md-8 mx-auto social-container my-2 order-md-1">
-        <button class="btn btn-primary mb-2">
-            <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook
-            </a>
-        </button>
-        <button class="btn btn-info mb-2">
-            <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
-        </button>
+{% load staticfiles %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static 'authen/css/index.css' %}" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Login using Facebook and Google account</title>
+</head>
+<div class="container-fluid">
+    <div>
+        <h1 class="text-white text-center">Sign into Conquez</h1>
+        <div class="card p-5">
+            <div class="row">
+                <div class="col-md-8 mx-auto social-container my-2 order-md-1">
+                    <button class="btn btn-primary mb-2">
+                        <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook
+                        </a>
+                    </button>
+                    <button class="btn btn-info mb-2">
+                        <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </div>
-{% endblock %}
