--- a/conquez/static/china/css/style.css
+++ b/conquez/static/china/css/style.css
@@ -1,15 +1,25 @@
 html,
 body {
-  height: 90%;
   width: 100%;
   margin: 0;
   padding: 0;
 
   font-family: 'Montserrat', sans-serif;
 
-  transition: background-color 0.2s;
-  will-change: background-color;
+  /* transition: background-color 0.2s;
+  will-change: background-color; */
+  overflow: hidden;
+  position: fixed;
+  height: 100%;
 }
+
+.wrapper {
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 
 .wrapper {
   position: relative;
@@ -28,9 +38,9 @@ body {
   border-radius: 15px;
   height: 600px;
 
-  box-shadow: 0 30 50 rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.2);
 
-  /* transform: translateX(-50%); */
+  transform: translateX(-50%);
   transition: left 0.5s ease-out;
   will-change: left;
 
@@ -61,35 +71,35 @@ body {
 }
 
 .card__header--first {
-  background-color: #F72648;
-  background-image: linear-gradient(#F72648, #FCCB3C);
+  background-color:  #de2910ff;
+  background-image: linear-gradient(#de2910ff, #FF0000);
 
-  background: #F72648;
-  background: linear-gradient(#F72648, #FCCB3C);
+  background: #de2910ff;
+  background: linear-gradient(#de2910ff, #FF0000);
 }
 
 .card__header--second {
-  background-color: #3CA3FC;
-  background-image: linear-gradient(#3CA3FC, #FFD300);
+  background-color: #006600;
+  background-image: linear-gradient(#006600, #00795E);
 
-  background: #3CA3FC;
-  background: linear-gradient(#3CA3FC, #FFD300);
+  background: #006600;
+  background: linear-gradient(#006600, #00795E);
 }
 
 .card__header--third {
-  background-color: #26C9F7;
-  background-image: linear-gradient(#26C9F7, #DFFC3C);
+  background-color: #000095;
+  background-image: linear-gradient(#000095, rgb(67,145, 211));
 
-  background: #26C9F7;
-  background: linear-gradient(#26C9F7, #DFFC3C);
+  background: #000095;
+  background: linear-gradient(#000095, rgb(67,145, 211));
 }
 
 .card__header--fourth {
-  background-color: #B993D6;
-  background-image: linear-gradient(#B993D6, #8CA6DB);
+  background-color: #ffde00ff;
+  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
 
-  background: #B993D6;
-  background: linear-gradient(#B993D6, #8CA6DB);
+  background: #ffde00ff;
+  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
 }
 
 .card__watermark {
@@ -166,18 +176,24 @@ body {
 }
 
 .card__wish-list--19 {
-  color: #8850FF;
-  border-color: #8850FF;
+  color: #de2910ff;
+  border-color: #de2910ff;
 }
 
 .card__wish-list--solstice {
-  color: #FFBA00;
-  border-color: #FFBA00;
+  color: #00795E;
+  border-color: #00795E;
 }
 
+.card__wish-list--taiwan {
+  color: #000095;
+  border-color: #000095;
+}
+
+
 .card__wish-list--huarache {
-  color: #26C9F7;
-  border-color: #26C9F7;
+  color: rgb(247, 207, 76);
+  border-color: rgb(247, 207, 76);
 }
 
 .card__category {
