added links to country page on globe page

--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation -->
     <div class="b-nav">
-      <li><a class="b-link" href="" target="_blank">Globe</a></li>
+      <li><a class="b-link" href="{% url 'home' %}" target="_blank">Globe</a></li>
       <li><a class="b-link" href="" target="_blank">Profile</a></li>
     </div>
     
@@ -28,7 +28,7 @@
     <div class="wrapper">
       <div class="card card--first">
         <div class="card__header card__header--first">
-          <div class="card__watermark" data-watermark="Plt"></div>
+          <div class="card__watermark" data-watermark="Can"></div>
           <div class="card__logo card__will-animate"></div>
 
           <span class="card__price card__will-animate">Question 1</span>
@@ -48,7 +48,7 @@
 
       <div class="card card--second">
         <div class="card__header card__header--second">
-          <!-- <div class="card__watermark" data-watermark="3r's"></div> -->
+          <div class="card__watermark" data-watermark="Can"></div>
 
           <div class="card__logo card__will-animate"></div>
 
@@ -69,7 +69,7 @@
 
       <div class="card card--third">
         <div class="card__header card__header--third">
-          <!-- <div class="card__watermark" data-watermark="r&w"></div> -->
+          <div class="card__watermark" data-watermark="Can"></div>
 
           <div class="card__logo card__will-animate"></div>
 
@@ -90,7 +90,7 @@
 
       <div class="card card--fourth">
           <div class="card__header card__header--fourth">
-            <!-- <div class="card__watermark" data-watermark="ecosystem"></div> -->
+            <div class="card__watermark" data-watermark="can"></div>
   
             <div class="card__logo card__will-animate"></div>
   
