--- a/conquez/authen/templates/authen/home.html
+++ b/conquez/authen/templates/authen/home.html
@@ -50,16 +50,23 @@
             <button class="btn btn-danger">
                 <a href="{% url 'logout' %}">Logout</a>
             </button>
+            <a href="{% url 'china' %}">China</a>
+            <a href="{% url 'brazil' %}">Brazil</a>
+            <a href="{% url 'india' %}">India</a>
+            <a href="{% url 'turkey' %}">Turkey</a>
+            <a href="{% url 'canada' %}">Canada</a>
         </div>
     </div>
-    <!-- container to draw 3D Gio globe-->
-    <div id="globalArea"></div>
-    <!-- container for selected country -->
-    <div id="infoBoard">
-        <div id="nameCard"></div>
+    <div>
+        <!-- container to draw 3D Gio globe-->
+        <div id="globalArea"></div>
+        <!-- container for selected country -->
+        <div id="infoBoard">
+            <div id="nameCard"></div>
+        </div>
+        <script>
+            initGlobe();
+        </script>
     </div>
-    <script>
-        initGlobe();
-    </script>
     
 </body>
