fized bug inside china and brazil page

--- a/conquez/turkey/templates/turkey/turkey.html
+++ b/conquez/turkey/templates/turkey/turkey.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turkey</title>
     <link rel="stylesheet" href="{% static 'turkey/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'turkey/css/burger.css' %}">
