--- a/conquez/china/templates/china/china.html
+++ b/conquez/china/templates/china/china.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>China</title>
     <link rel="stylesheet" href="{% static 'china/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'china/css/burger.css' %}">
