--- a/conquez/india/templates/india/india.html
+++ b/conquez/india/templates/india/india.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>India</title>
     <link rel="stylesheet" href="{% static 'india/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'india/css/burger.css' %}">
