--- a/design/ken/sliderpage/china/css/main.css
+++ b/design/ken/sliderpage/china/css/main.css
@@ -1,5 +1,6 @@
 html,
 body {
+  height: 95%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -8,18 +9,7 @@ body {
 
   transition: background-color 0.2s;
   will-change: background-color;
-  overflow: hidden;
-  position: fixed;
-  height: 100%;
 }
-
-.wrapper {
-  position: fixed;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-}
-
 
 .wrapper {
   position: relative;
@@ -31,14 +21,14 @@ body {
 .card {
   display: block;
   position: absolute;
-  top: 10%;
+  top: 18%;
   margin: 0 auto;
-  width: 400px;
+  width: 330px;
   background-color: #fff;
   border-radius: 15px;
-  height: 600px;
+  height: 500px;
 
-  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 30 50 rgba(0, 0, 0, 0.2);
 
   transform: translateX(-50%);
   transition: left 0.5s ease-out;
@@ -95,11 +85,11 @@ body {
 }
 
 .card__header--fourth {
-  background-color: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background-color: #B993D6;
+  background-image: linear-gradient(#B993D6, #8CA6DB);
 
-  background: #ffde00ff;
-  background-image: linear-gradient(#ffde00ff, rgb(247, 207, 76));
+  background: #B993D6;
+  background: linear-gradient(#B993D6, #8CA6DB);
 }
 
 .card__watermark {
@@ -176,13 +166,8 @@ body {
 }
 
 .card__wish-list--19 {
-  color: #de2910ff;
-  border-color: #de2910ff;
-}
-
-.card__wish-list--solstice {
-  color: #00795E;
-  border-color: #00795E;
+  color: #8850FF;
+  border-color: #8850FF;
 }
 
 .card__wish-list--taiwan {
@@ -190,10 +175,9 @@ body {
   border-color: #000095;
 }
 
-
 .card__wish-list--huarache {
-  color: rgb(247, 207, 76);
-  border-color: rgb(247, 207, 76);
+  color: #26C9F7;
+  border-color: #26C9F7;
 }
 
 .card__category {
