globe background changed

--- a/conquez/authen/templates/authen/home.html
+++ b/conquez/authen/templates/authen/home.html
@@ -33,4 +33,5 @@
         </div>
     </div>
     <script src="{% static 'authen/js/main.js' %}"></script>
+    <script src="{% static 'authen/js/home_2.js' %}"></script>
 </body>
