created new app country, trasfered all the country pages there

--- a/conquez/country/templates/antarctica/antarctica.html
+++ b/conquez/country/templates/antarctica/antarctica.html
@@ -10,5 +10,6 @@
 <body>
     <h1>TOO CLEAN TO CONQUER!! RETREAT!!</h1>
     <img src="{% static 'antarctica/images/penguins.jpg' %}" alt="">
+    <a href="{% url 'home' %}">Go Back To The Globe</a>
 </body>
 </html>
